added stuff for doc files

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -15,12 +15,20 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from main_functions import *\n",
     "\n",
     "import myData\n",
     "import myPlots\n",
     "import mySignal\n",
     "import myStats"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -31,86 +39,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "readCoastLine\n",
-      "\n",
-      "    Function to read in the coast line data.\n",
-      "    Parameters: None\n",
-      "    Returns:\n",
-      "        pd dataframe of longitude and latitude.\n",
-      "    \n",
-      "readMinuteData\n",
-      "\n",
-      "    Function to read in minute resolution data and return a pandas dataframe.\n",
-      "    Parameters:\n",
-      "        filepath (str): name of station.\n",
-      "    Returns:\n",
-      "        pd dataframe of times, temperature and pressure\n",
-      "    \n",
-      "readHourData\n",
-      "\n",
-      "    Function to read hour resolution data given a filepath.\n",
-      "    Parameters:\n",
-      "        col_index (int): index referring to which station used.\n",
-      "             0. Bowser.\n",
-      "             1. Cortes.\n",
-      "             2. Craigflower.\n",
-      "             3. Cumberland.\n",
-      "             4. HappyValley.\n",
-      "             5. JamesBay.\n",
-      "             6. Macaulay.\n",
-      "             7. Monterey.\n",
-      "             8. Phoenix.\n",
-      "             9. RVYC.\n",
-      "            10. Rogers.\n",
-      "            11. ShawniganLake.\n",
-      "            12. Strawberry.\n",
-      "            13. UVicSci.\n",
-      "            14. VIU.\n",
-      "\n",
-      "    Returns:\n",
-      "        : pandas frame of data, (timestamp, temp, press)\n",
-      "    \n",
-      "getStationInfo\n",
-      "\n",
-      "    Function to get a station's longtitude, latitude and elevation.\n",
-      "\n",
-      "    Parameters:\n",
-      "        station (str) Optional: name of station. default returns dataframe for all stations\n",
-      "    Returns:\n",
-      "        Pandas dataframe of long, lat, and elev.\n",
-      "\n",
-      "    \n",
-      "removeStation\n",
-      "\n",
-      "    Function to remove a station from a DataFrame of all stations' location info.\n",
-      "\n",
-      "    Returns: DataFrame of stations' info.\n",
-      "\n",
-      "    Parameters:\n",
-      "        name (str): name of Station to be deleted.\n",
-      "             0. Bowser.\n",
-      "             1. Cortes.\n",
-      "             2. Craigflower.\n",
-      "             3. Cumberland.\n",
-      "             4. HappyValley.\n",
-      "             5. JamesBay.\n",
-      "             6. Macaulay.\n",
-      "             7. Monterey.\n",
-      "             8. Phoenix.\n",
-      "             9. RVYC.\n",
-      "            10. Rogers.\n",
-      "            11. ShawniganLake.\n",
-      "            12. Strawberry.\n",
-      "            13. UVicSci.\n",
-      "            14. VIU.\n",
-      "    \n"
+      "List of available functions:\n",
+      " 1: readCoastLine\n",
+      " 2: readMinuteData\n",
+      " 3: readHourData\n",
+      " 4: getStationInfo\n",
+      " 5: removeStation\n"
      ]
     }
    ],
    "source": [
-    "for func in myData.function_list:\n",
-    "    print(func.__name__)\n",
-    "    print(func.__doc__)"
+    "showModules(myData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of available functions:\n",
+      " 1: applyGridInterp\n",
+      " 2: GetNS_NFFT\n",
+      " 3: PowerSpectrum\n"
+     ]
+    }
+   ],
+   "source": [
+    "showModules(mySignal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mSignature:\u001b[0m \u001b[0mmySignal\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapplyGridInterp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstationInfo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mDocstring:\u001b[0m\n",
+      "Function to apply a scipy griddata and interpolation for making a heatmap.\n",
+      "\n",
+      "Parameters:\n",
+      "    data: data to be analized.\n",
+      "    StationInfo (DataFrame): dataframe of stations' info.\n",
+      "    grid (tuple): grid cells (x, y)-axis.\n",
+      "    method (str): method to use for the intepolation, default = cubic.\n",
+      "\n",
+      "Returns: (tuple): (xi, yi, zi, coastline, locs)\n",
+      "    xi & yi: arrays representing the coordinates of a grid.\n",
+      "    coastline: DataFrame for the coastline.\n",
+      "    locs: DataFrame for station locations.\n",
+      "\u001b[1;31mFile:\u001b[0m      c:\\users\\thomas\\mylocalfiles\\mypypackages\\mysignal.py\n",
+      "\u001b[1;31mType:\u001b[0m      function\n"
+     ]
+    }
+   ],
+   "source": [
+    "mySignal.applyGridInterp?"
    ]
   },
   {
