--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "from main_functions import *\n",
     "\n",
     "import myData\n",
+    "import myDates\n",
     "import myPlots\n",
     "import mySignal\n",
     "import myStats"
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -33,57 +34,42 @@
      "output_type": "stream",
      "text": [
       "List of available functions:\n",
-      "   1: readCoastLine\n",
-      "   2: readMinuteData\n",
-      "   3: readHourData\n",
-      "   4: getStationInfo\n",
-      "   5: removeStation\n"
+      "   1: DateStrtoNum\n",
+      "   2: NumToStr\n",
+      "   3: DateNumtoStr\n",
+      "   4: getRange\n"
      ]
     }
    ],
    "source": [
-    "showModules(myData)"
+    "showModules(myDates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;31mSignature:\u001b[0m \u001b[0mmyData\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremoveStation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mSignature:\u001b[0m \u001b[0mmyDates\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDateNumtoStr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatenum\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgiveTime\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mDocstring:\u001b[0m\n",
-      "Function to remove a station from a DataFrame of all stations' location info.\n",
+      "Function to convert timestamps into a date string format.\n",
       "\n",
-      "Returns: DataFrame of stations' info.\n",
+      "datenum: date number\n",
+      "dtype: data type; mn - minute, hr - hour\n",
+      "giveTime: True/False, gives clock time.\n",
       "\n",
-      "Parameters:\n",
-      "    name (str): name of Station to be deleted.\n",
-      "         0. Bowser.\n",
-      "         1. Cortes.\n",
-      "         2. Craigflower.\n",
-      "         3. Cumberland.\n",
-      "         4. HappyValley.\n",
-      "         5. JamesBay.\n",
-      "         6. Macaulay.\n",
-      "         7. Monterey.\n",
-      "         8. Phoenix.\n",
-      "         9. RVYC.\n",
-      "        10. Rogers.\n",
-      "        11. ShawniganLake.\n",
-      "        12. Strawberry.\n",
-      "        13. UVicSci.\n",
-      "        14. VIU.\n",
-      "\u001b[1;31mFile:\u001b[0m      c:\\users\\thomas\\mylocalfiles\\mypypackages\\mydata.py\n",
+      "returns a date format string.\n",
+      "\u001b[1;31mFile:\u001b[0m      c:\\users\\thomas\\mylocalfiles\\mypypackages\\mydates.py\n",
       "\u001b[1;31mType:\u001b[0m      function\n"
      ]
     }
    ],
    "source": [
-    "myData.removeStation?"
+    "myDates.DateNumtoStr?"
    ]
   },
   {
