--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,24 +9,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from main_functions import *\n",
+    "from main_functions import showModules\n",
     "\n",
-    "import myData\n",
-    "import myDates\n",
-    "import myPlots\n",
-    "import mySignal\n",
-    "import myStats"
+    "# import myData\n",
+    "# import myDates\n",
+    "# import myPlots\n",
+    "# import mySignal\n",
+    "# import myStats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of available functions:\n",
+      "   1: readCoastLine\n",
+      "   2: readMinuteData\n",
+      "   3: readHourData\n",
+      "   4: getStationInfo\n",
+      "   5: removeStation\n"
+     ]
+    }
+   ],
+   "source": [
+    "showModules(myData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,33 +65,6 @@
    ],
    "source": [
     "showModules(myDates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;31mSignature:\u001b[0m \u001b[0mmyDates\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDateNumtoStr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatenum\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgiveTime\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mDocstring:\u001b[0m\n",
-      "Function to convert timestamps into a date string format.\n",
-      "\n",
-      "datenum: date number\n",
-      "dtype: data type; mn - minute, hr - hour\n",
-      "giveTime: True/False, gives clock time.\n",
-      "\n",
-      "returns a date format string.\n",
-      "\u001b[1;31mFile:\u001b[0m      c:\\users\\thomas\\mylocalfiles\\mypypackages\\mydates.py\n",
-      "\u001b[1;31mType:\u001b[0m      function\n"
-     ]
-    }
-   ],
-   "source": [
-    "myDates.DateNumtoStr?"
    ]
   },
   {
