--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from main_functions import showModules\n",
+    "from master_functions import showModules\n",
     "\n",
     "# import myData\n",
     "# import myDates\n",
