--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "from master_functions import showModules\n",
     "\n",
-    "# import myData\n",
+    "import myData\n",
     "# import myDates\n",
     "# import myPlots\n",
     "# import mySignal\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
